Http-client-branch: move to standard package and module name