@@ -24,8 +24,8 @@
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.Flow;
 import java.util.function.Function;
-import jdk.incubator.http.HttpResponse.BodyHandler;
-import jdk.incubator.http.HttpResponse.BodySubscriber;
+import java.net.http.HttpResponse.BodyHandler;
+import java.net.http.HttpResponse.BodySubscriber;
 
 /*
  * @test
